[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/FutilePro.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/FutileProLarge.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ArtAssets/Mouse_Idle.tres" type="Texture" id=4]
[ext_resource path="res://scripts/Swivel.gd" type="Script" id=5]
[ext_resource path="res://scripts/GrowOnHover.gd" type="Script" id=6]
[ext_resource path="res://scenes/Tutorial.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ArtAssets/MousePet.tres" type="Texture" id=8]
[ext_resource path="res://assets/sprites/lighter_background.jpg" type="Texture" id=9]

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene = ExtResource( 7 )
mouse_pet = ExtResource( 8 )
mouse_idle = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 608.0
color = Color( 0, 0, 0, 0.596078 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 608.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 478.0
margin_bottom = 576.0
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 478.0
margin_bottom = 189.0
size_flags_vertical = 3

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 78.0
margin_top = 66.0
margin_right = 400.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 178, 28 )
custom_fonts/font = ExtResource( 3 )
text = "ALGERNON"

[node name="SwivelEffect" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer/CenterContainer/Title"]
script = ExtResource( 5 )

[node name="Start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 213.0
margin_right = 478.0
margin_bottom = 247.0
rect_pivot_offset = Vector2( 239, 17 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Start"
flat = true

[node name="GrowOnHover" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer/Start"]
script = ExtResource( 6 )

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 478.0
margin_bottom = 305.0
rect_pivot_offset = Vector2( 239, 17 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Options"
flat = true

[node name="GrowOnHover" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
script = ExtResource( 6 )

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 329.0
margin_right = 478.0
margin_bottom = 363.0
rect_pivot_offset = Vector2( 239, 17 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[node name="GrowOnHover" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer/Quit"]
script = ExtResource( 6 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 387.0
margin_right = 478.0
margin_bottom = 576.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 482.0
margin_right = 960.0
margin_bottom = 576.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_left = 79.0
margin_top = 128.0
margin_right = 399.0
margin_bottom = 448.0
rect_min_size = Vector2( 320, 320 )
rect_pivot_offset = Vector2( 160, 160 )
texture = ExtResource( 4 )
expand = true

[node name="SwivelEffect" type="Node" parent="MarginContainer/HBoxContainer/CenterContainer/TextureRect"]
script = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="gui_input" from="MarginContainer/HBoxContainer/CenterContainer/TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/CenterContainer/TextureRect" to="." method="_on_TextureRect_mouse_exited"]
